--- a/personal-budget/src/app/menu/menu.component.html
+++ b/personal-budget/src/app/menu/menu.component.html
@@ -1,10 +1,10 @@
-<div class="menu">
+<nav class="menu">
         <ul>
             <!-- This is a Semantic HTML Change -->
             <li><a [routerLink]="['/']">Homepage</a></li>
             <li><a [routerLink]="['/about']">About</a></li>
             <li><a [routerLink]="['/login']">Login</a></li>
         </ul>
-    </div>
+    </nav>
 
 
